--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha index.test.js"
+    "test": "mocha starter.test.js",
+    "test-reporter": "mocha starter.test.js --reporter mochawesome"
   },
   "keywords": [],
   "author": "illuSioN4ng",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "mochawesome": "^4.0.1"
   },
   "dependencies": {
     "lodash": "^4.17.11"
